# raag-midi-gen

./: .gitignore  Makefile  README.md  pyproject.toml  setup.sh
data/: README.md
data/midi_files/Yaman/Aalaap/: Aalaap 1.0.mid  Aalaap 10.0.mid  Aalaap 11.0.mid  Aalaap 12.0.mid  Aalaap 13.0.mid  Aalaap 14.0.mid  Aalaap 15.0.mid  Aalaap 2.0.mid  Aalaap 3.0.mid  Aalaap 4.0.mid  Aalaap 5.0.mid  Aalaap 6.0.mid  Aalaap 7.0.mid  Aalaap 8.0.mid  Aalaap 9.0.mid
data/midi_files/Yaman/Aao Balma/: Aao Balma  - Sthaayi 1.0.mid  Aao Balma  - Sthaayi 1.1.mid  Aao Balma - Sthaayi 2.0.mid  Aao Balma - Sthaayi 2.1.mid
data/midi_files/Yaman/Aeri Aali/: Aeri Aali  - Antra 1.0.mid  Aeri Aali  - Antra 1.1_1.mid  Aeri Aali  - Antra 1.1_2.mid  Aeri Aali  - Antra 2.0.mid  Aeri Aali  - Antra 2.1_1.mid  Aeri Aali  - Antra 2.1_2.mid  Aeri Aali - Sthaayi 1.0.mid  Aeri Aali - Sthaayi 1.1_1.mid  Aeri Aali - Sthaayi 1.1_2.mid  Aeri Aali - Sthaayi 1.2_1.mid  Aeri Aali - Sthaayi 1.2_2.mid  Aeri Aali - Sthaayi 2.0.mid  Aeri Aali - Sthaayi 2.1.mid
eda/: README.md
eda/notebooks/: Evaluating MusPy.ipynb  Evaluating infmidi.ipynb
experiments/: README.md
experiments/notebooks/: Data Augmentation.ipynb  Elastic Net.ipynb  Embedding Layers.ipynb  LitAutoEncoder.ipynb  Untitled.ipynb
experiments/scripts/elastic_net/: elastic_net.py
experiments/scripts/mnist_classfier/: data_module.py  model.py  train_and_test.py
raag_midi_gen/: README.md  dataset.py  dataset_muspy.py  embedding.py  embeddings.py  git_utils.py  mlflow_utils.py  numpy_encode.py  paths.py  tokenization.py
(+58 files in other folders)
